// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders text in another locale 1`] = `
<div>
  <ul
    className="header"
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "test",
          "pathname": "/fr/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/fr/"
        onClick={[Function]}
        style={Object {}}
      >
        Accueil
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/fr/about"
        onClick={[Function]}
      >
        À propos
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/fr/topics"
        onClick={[Function]}
      >
        Sujets
      </a>
    </li>
    <br />
    <li>
      <a
        aria-current="page"
        className="active"
        href="/fr/"
        onClick={[Function]}
        style={Object {}}
      >
        Français
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/en/"
        onClick={[Function]}
      >
        English
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/pig/"
        onClick={[Function]}
      >
        Pig Latin
      </a>
    </li>
  </ul>
  <hr />
  <div>
    <h2>
      Accueil
    </h2>
    <p>
      Ceci est la page d'accueil
    </p>
  </div>
</div>
`;

exports[`renders with full navbar and Home page 1`] = `
<div>
  <ul
    className="header"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Home
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/topics"
        onClick={[Function]}
      >
        Topics
      </a>
    </li>
    <br />
    <li>
      <a
        aria-current={null}
        href="/fr/"
        onClick={[Function]}
      >
        Français
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/en/"
        onClick={[Function]}
      >
        English
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/pig/"
        onClick={[Function]}
      >
        Pig Latin
      </a>
    </li>
  </ul>
  <hr />
  <div>
    <h2>
      Home
    </h2>
    <p>
      This is the homepage
    </p>
  </div>
</div>
`;
